--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -32,3 +32,9 @@ main {
     margin-right: -300px;
 }
 
+button {
+    color: #fffdfd;
+    background-color: black;
+    padding: 10px;
+    width: 90px;
+}
