--- a/Assets/css/blog.css
+++ b/Assets/css/blog.css
@@ -6,7 +6,7 @@
 }
 
 header {
-    margin: 10px;
+    padding: 10px;
 }
 
 button {
@@ -68,11 +68,10 @@ li {
   }
   
   .dark header {
-    color: #fefafa;
     background-color: #18202a ;
   }
-  .dark figure {
-    color: #fefafa;
+  .dark .hero {
+    border-bottom: 5px solid #fefafa;
   }
   .dark section {
     color: #fefafa;
