--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,22 +15,69 @@
 .vl {
     position:absolute;
     border-left: 5px solid black;
+    height: 650px;
     padding: 3px;
-    height:630px;
-    margin-left: -400px;
+    margin-left: 750px;
 }
 
 header {
+    padding: 10px;
+}
+h1 {
+    text-align: center;
+    padding: 30px;
+}
+.sides {
     display: flex;
-    justify-content: center;
-    margin-right: -400px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: 200px;
 }
 
-main {
-    display: flex;
-    justify-content: center;
-    margin-right: -300px;
+.side {
+    /* background-color: aquamarine; */
+    flex-basis: calc(50%-em);
+    margin: 3px;
 }
+#circle {
+    width: 400px;
+    height: 400px;
+    background: red;
+    border-radius: 50%;
+    text-align: center;
+  }
+
+  #shape-text {
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    font-size: 400%;
+  }
+#form label{
+    display: block;
+    width: 500px;
+    }
+#form input{
+    display: inline-block;
+    width: 500px;
+    margin: 5px;
+    border-radius: 5%;
+}
+
+
+
+
+  
+    
+/* main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    float: right;
+    
+} */
+
+
 
 button {
     color: #fffdfd;
@@ -38,5 +85,44 @@ button {
     padding: 10px;
     width: 90px;
 }
+#theme {
+    float: right;
+}
+
+.dark {
+    background-color:#18202a;
+    height: 120vh;
+    color: #fefafa;
+   
+  }
+  
+  .dark header {
+    background-color: #18202a ;
+  }
+  .dark .hero {
+    border-bottom: 5px solid #fefafa;
+  }
+  .dark section {
+    color: #fefafa;
+    border: 5px solid #fefafa;
+  }
+
+  
+.light {
+    background-color:#fefafa;
+    height: 100vh;
+    color: #000000;
+   
+  }
+  
+  .light header {
+    color: #000000;
+  }
+  .light figure {
+    color: #000000;
+  }
+  .light section {
+    color: #000000;
+  }
 
 
