--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,7 +15,7 @@
 .vl {
     position:absolute;
     border-left: 5px solid black;
-    height: 650px;
+    height: 750px;
     padding: 3px;
     margin-left: 750px;
 }
@@ -23,6 +23,7 @@
 header {
     padding: 10px;
 }
+
 h1 {
     text-align: center;
     padding: 30px;
@@ -74,9 +75,16 @@ button {
     background-color: black;
     padding: 10px;
     width: 90px;
-}
-#theme {
+  }
+
+  #theme {
     float: right;
+  }
+  
+  #submit {
+    margin-top: 10px;
+    background-color: black;
+    width: 600px;
 }
 
 
@@ -90,16 +98,19 @@ button {
   .dark header {
     background-color: #18202a ;
   }
+
   .dark .hero {
     border-bottom: 5px solid #fefafa;
   }
+
   .dark .vl {
     position:absolute;
     border-left: 5px solid #fefafa;
-    height: 650px;
+    height: 770px;
     padding: 3px;
     margin-left: 750px;
 }
+
   .dark section {
     color: #fefafa;
     border: 5px solid #fefafa;
